--- a/src/components/Person/styles.css
+++ b/src/components/Person/styles.css
@@ -4,6 +4,20 @@
     width: 53rem;
     text-align: center;
     vertical-align: middle;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+    mix-blend-mode: normal;
 }
 
 .odd{
@@ -12,4 +26,27 @@
 
 .even{
     background-color: #c4c4c4;
+}
+
+.name-report{
+    padding-left: 5rem
+}
+
+.phone-report{
+    margin-left: 5rem;
+}
+
+.carne-report{
+    margin-left: 5rem;
+}
+
+.status-report{
+    margin-left: 5rem
+}
+
+.sign{
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 0.75rem;
+    background-color: #21822B;
 }
