--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -6,7 +6,8 @@
 }
 
 .title{
-    margin-left: 667px;
+    margin-top: 2rem;
+    margin-left: 40rem;
     font-style: normal;
     font-weight: normal;
     font-size: 58px;
