--- a/src/components/PersonScreen/styles.css
+++ b/src/components/PersonScreen/styles.css
@@ -3,3 +3,20 @@
     flex-direction: row;
     margin-top: 6rem;
 }
+.people-screens-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.oneb{
+    padding-left: 3rem;
+}
+.twob{
+    padding-left: 3rem;
+}
+.botones{
+    margin-left: 13.75rem;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+}
