--- a/src/components/PersonInfo/styles.css
+++ b/src/components/PersonInfo/styles.css
@@ -142,19 +142,20 @@
 }
 
 .info{
+    height: 17rem;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 24px;
     display: flex;
-    align-items: center;
     vertical-align: top;
     color: #000000;
     width: 18rem;
+    overflow-y: scroll;
 }
 
 .one{
-        margin-left: 5rem;
+    margin-left: 5rem;
 }
 
 .two{
