--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -2,9 +2,6 @@
     position: fixed;
     bottom: 0;
     right: 0;
-}
-
-.signature{
     font-weight: normal;
-    font-size: x-small;
+    font-size: xx-small;
 }
