--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -7,7 +7,7 @@
 
 .title{
     margin-top: 2rem;
-    margin-left: 40rem;
+    margin-left: 25rem;
     font-style: normal;
     font-weight: normal;
     font-size: 58px;
@@ -15,6 +15,7 @@
     display: flex;
     align-items: center;
     color: #FFFFFF;
+    margin-right: 28rem;
 }
 
 .tabs-wrapper{
@@ -28,4 +29,12 @@
 
     background: #078B45;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.title-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.photo{
+    width: 12rem;
+    height: 12rem;
 }
