--- a/src/components/Person/styles.css
+++ b/src/components/Person/styles.css
@@ -32,11 +32,11 @@
 }
 
 .name-report{
-    padding-left: 5rem
+    padding-left: 4rem
 }
 
 .phone-report{
-    margin-left: 3rem;
+    margin-left: 0rem;
     width: fit-content;
 }
 
@@ -61,4 +61,78 @@
 .sign-wrapper{
     width: 3rem;
     padding-left: 0.5rem;
+}
+
+/* Make clicks pass-through */
+#nprogress {
+    pointer-events: none;
+}
+
+#nprogress .bar {
+    background: #078B45;
+
+    position: fixed;
+    z-index: 1031;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 2px;
+}
+
+/* Fancy blur effect */
+#nprogress .peg {
+    display: block;
+    position: absolute;
+    right: 0px;
+    width: 100px;
+    height: 100%;
+    box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+    opacity: 1.0;
+
+    -webkit-transform: rotate(3deg) translate(0px, -4px);
+    -ms-transform: rotate(3deg) translate(0px, -4px);
+    transform: rotate(3deg) translate(0px, -4px);
+}
+
+/* Remove these to get rid of the spinner */
+#nprogress .spinner {
+    display: block;
+    position: fixed;
+    z-index: 1031;
+    top: 35rem;
+    left: 25rem;
+}
+
+#nprogress .spinner-icon {
+    width: 5rem;
+    height: 5rem;
+    box-sizing: border-box;
+
+    border: solid 2px transparent;
+    border-top-color: #21822B;
+    border-left-color: #078B45;
+    border-radius: 50%;
+
+    -webkit-animation: nprogress-spinner 400ms linear infinite;
+    animation: nprogress-spinner 400ms linear infinite;
+}
+
+.nprogress-custom-parent {
+    overflow: hidden;
+    position: relative;
+}
+
+.nprogress-custom-parent #nprogress .spinner,
+.nprogress-custom-parent #nprogress .bar {
+    position: absolute;
+}
+
+@-webkit-keyframes nprogress-spinner {
+    0%   { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes nprogress-spinner {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
