--- a/src/components/Agreement/styles.css
+++ b/src/components/Agreement/styles.css
@@ -10,11 +10,14 @@
 .agreement-text{
     font-style: normal;
     font-weight: normal;
-    font-size: 36px;
+    font-size: 1.5rem;
     line-height: 36px;
     display: flex;
-    align-items: center;
-    text-align: center;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    margin-left: 5rem;
+    margin-right: 5rem;
 
     color: #000000;
 }
